--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZZY</title>
+    <title>SJQ</title>
   </head>
   <body style="max-width:700px;margin:30px auto;padding: 15px;line-height: 1.7;">
     <div
@@ -15,7 +15,7 @@
       "
     >
       <img
-        src="C:\Users\1\Pictures\sucai.jpg"
+        src="https://ts1.cn.mm.bing.net/th/id/R-C.0473e22f9791478e7b7195f3aa24646c?rik=UzWW7uwlyeKGHQ&riu=http%3a%2f%2fimgs.jushuo.com%2fdimg%2f2016-08-04%2f57a2ff1e71239.png&ehk=uF611zfGfJq%2bpe3NbjPxwonxEq1K4nTw9bVAEwZW6F4%3d&risl=&pid=ImgRaw&r=0"
         alt="touxiang"
         width="60"
         height="60"
@@ -30,7 +30,7 @@
     >
       <h3>个人资料</h3>
       <p>
-        张朝阳，男，2000.8，家住上海市浦东新区花园石桥路28弄；政治面貌：群众，未婚，身体状况良好
+        宋佳琪，男，2000.8，家住上海市浦东新区花园石桥路28弄；政治面貌：群众，未婚，身体状况良好
       </p>
       <p>就读于上海复旦大学计算机专业博士，</p>
       <p>精通4国语言，在计算机领域颇有成就</p>
